log.txt
./src/_printf.cpp: In function ‘char bstd::sprintf(char*, const char*, ...)’:
./src/_printf.cpp:143:28: error: a function-definition is not allowed here before ‘{’ token
  143 |     void writecbuf(char a) {
      |                            ^
./src/_printf.cpp:148:29: error: a function-definition is not allowed here before ‘{’ token
  148 |     void writesbuf(char* a) {
      |                             ^
./src/_printf.cpp:152:26: error: ‘writecbuf’ was not declared in this scope
  152 |     char r = core_printf(writecbuf, writesbuf, fmt, ap);
      |                          ^~~~~~~~~
./src/_printf.cpp:152:37: error: ‘writesbuf’ was not declared in this scope
  152 |     char r = core_printf(writecbuf, writesbuf, fmt, ap);
      |                                     ^~~~~~~~~
./src/_printf.cpp:142:12: warning: unused variable ‘counter’ [-Wunused-variable]
  142 |     size_t counter = 0;
      |            ^~~~~~~
